--- a/LOLDataAgent/可实现的查询.md
+++ b/LOLDataAgent/可实现的查询.md
@@ -1,4 +1,4 @@
-基于我们之前的调试和 Schema 优化，你的 Agent 目前已经构建了一套非常强大的查询逻辑体系。
+![alt text](image.png)
 
 以下是当前 **Agent 可以稳定实现的 5 大类查询** 及其对应的能力总结：
 
@@ -46,3 +46,13 @@
 
 ---
 
+一些用例(自测正常)：
+用户提问: "25年LPL夏季赛 BLG 的胜率是多少？"
+用户提问: "T1 在25年LCK春季赛的胜负场"
+用户提问: "GenG 在25年LCK杯的表现"
+用户提问: "23年S赛半决赛 T1 对阵 JDG 的结果"
+用户提问: "Faker 历届S赛的总击杀数"
+用户提问: "24年LPL夏季赛定组赛 蓝色方胜率"
+用户提问: "25年MSI 红方和蓝方谁胜率高"
+用户提问: "Bin 25年S赛的总KDA"
+用户提问: "24年LPL春季赛常规赛 BLG 打 TES 的战绩"
